# pick

./: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS.md  Cargo.toml  Dockerfile  Dockerfile.scratch  EPIC_PLAN.md  PARSER_COVERAGE.md  PARSER_TEST_PLAN.md  PROGRESS.md  README.md  ROADMAP_ANALYSIS.md  ROADMAP_REVISED.md  ROADMAP_SUMMARY.md  STRIKEKIT_SCHEMA_ANALYSIS.md  index.html  index.yaml  justfile  mise.toml  pick-connector-0.1.3.tgz  pick-connector-0.2.0.tgz  syscall_compat.c
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml  docker-multiarch.yml  helm-publish.yml  helm-release.yml  release.yml
.superpowers/brainstorm/765169-1774291464/: .events  .server-stopped  login-screen.html
android-lib/: build.gradle.kts  proguard-rules.pro
android-lib/src/main/: AndroidManifest.xml
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: main.rs
apps/headless/src/: main.rs
apps/mobile/: Cargo.toml  Dioxus.toml
apps/mobile/android/: MainActivity.kt
apps/mobile/src/: main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
chart/pick-connector/: Chart.yaml  values.yaml
chart/pick-connector/templates/: _helpers.tpl  clusterrolebinding.yaml  deployment.yaml  pvc-connector-data.yaml  service.yaml  serviceaccount.yaml
crates/core/: Cargo.toml
crates/core/src/: build_defaults.rs  config.rs  connector.rs  error.rs  lib.rs  logging.rs  output_parser.rs  rendering.rs  seed.rs  settings.rs  state.rs  terminal.rs  theme_loader.rs  tools.rs  url_validation.rs  workspace.rs
crates/core/tests/: connector_execute.rs  tool_integration.rs
crates/platform/: Cargo.toml
crates/platform/examples/: test_backend.rs
crates/platform/src/: common.rs  lib.rs  traits.rs
crates/platform/tests/: sandbox_integration.rs
crates/tools/: Cargo.toml
crates/tools/src/: arp_table.rs  autopwn.rs  device_info.rs  execute_command.rs  lib.rs  list_files.rs  network_discover.rs  port_scan.rs  read_file.rs  screenshot.rs  ssdp_discover.rs  traffic_capture.rs  util.rs  wifi_interfaces.rs  wifi_scan.rs  write_file.rs
crates/tools/tests/: parser_integration.rs
crates/ui/: Cargo.toml  package.json  tailwind.css
crates/ui/src/: connector_app.rs  download_manager.rs  ipc.rs  lib.rs  liveview_server.rs  platform_helper.rs  session.rs  shell_ws.rs  theme.rs
docs/: SECURITY_AUDIT_RESULTS.md  SECURITY_AUDIT_TRACKING.md  SECURITY_README.md
docs/superpowers/plans/: 2026-03-23-build-time-config-and-login-ui.md
docs/superpowers/specs/: 2026-03-23-build-time-config-and-login-ui-design.md
marketplace/: README.md  _template.toml  index.toml  pentest-connector.toml
patches/dioxus-liveview/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patches/dioxus-liveview/src/: events.rs  query.rs
screenshots/: 01-login.toml  02-login-advanced.toml  03-connecting.toml  04-chrome-auth.toml  capture.sh
(+141 files in other folders)
