[package]
name = "pentest-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pentest-web"
path = "src/main.rs"

[dependencies]
# Crates
pentest-core = { workspace = true, features = ["browser-auth"] }
pentest-platform = { workspace = true, features = ["desktop-all"] }
pentest-ui = { workspace = true, features = ["connector", "shell-ws"] }
pentest-tools = { workspace = true, features = ["desktop"] }

# Dioxus with liveview + server features
dioxus = { workspace = true, features = ["liveview", "server"] }
dioxus-liveview = { version = "0.7", features = ["axum"] }

# Web server
axum = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
